--- a/index.html
+++ b/index.html
@@ -2,43 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Azure</title>
+  <title>EVENG SOP Documents</title>
   <style>
     body {
-      background-color: #1e2633;
-      color: white;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      margin: 40px;
     }
     h1 {
-      color: #00bfff;
+      color: #2c3e50;
+      border-bottom: 3px solid #2980b9;
+      padding-bottom: 10px;
     }
     ul {
       list-style-type: none;
-      padding-left: 0;
+      padding: 0;
     }
     li {
+      background: white;
+      padding: 15px;
       margin: 10px 0;
+      border-left: 5px solid #2980b9;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     a {
-      color: #00ffe5;
       text-decoration: none;
+      color: #2980b9;
+      font-weight: bold;
+      font-size: 18px;
     }
     a:hover {
-      text-decoration: underline;
-    }
-    .error {
-      color: red;
+      color: #1abc9c;
     }
   </style>
 </head>
 <body>
-  <h1>Azure files</h1>
-  <ul id="file-list">
-    <li>Loading files...</li>
+  <h1>📄 Infoblox SOP Documents</h1>
+  <ul>
+    <li><a href="https://github.com/surajpjoshi/Infoblox/edit/master/index.html" target="_blank">Infoblox SOP Documents - Edit</a></li>
+    <li><a href="sop_infoblox_nios_initial_cli_setup_html.html" target="_blank">infoblox_nios_initial_cli_setup</a></li>
+         
   </ul>
-
-  <script src="script.js"></script>
 </body>
 </html>
