--- a/sop_infoblox_nios_initial_cli_setup_html.html
+++ b/sop_infoblox_nios_initial_cli_setup_html.html
@@ -179,10 +179,62 @@ UI restarted.
         <li class="step">
           <strong>(Optional) Add specific NIOS model license key.</strong>
           <p>Choose a virtual appliance model. Example below selects <span class="kbd">IB‑V815</span>.</p>
-          <pre><code>Infoblox &gt; set temp_license
+          <pre><code>
+Infoblox > set temp_license
+
+  1. DNSone (DNS, DHCP)
+  2. DNSone with Grid (DNS, DHCP, Grid)
+  3. Network Services for Voice (DHCP, Grid)
+  4. Add NIOS License
+  5. Add DNS Server license
+  6. Add DHCP Server license
+  7. Add Grid license
+  8. Add Microsoft management license
+  9. Add Multi-Grid Management license
+ 10. Add Query Redirection license
+ 11. Add Response Policy Zones license
+ 12. Add FireEye license
+ 13. Add DNS Traffic Control license
+ 14. Add Cloud Network Automation license
+ 15. Add Security Ecosystem license
+ 16. Add Threat Analytics license
+ 17. Add Flex Grid Activation license
+ 18. Add Flex Grid Activation for Managed Services license
+
 Select license (1-18) or q to quit: 4
-...
-Enter a number corresponding to a NIOS model (1 - 29) or q to quit: 4  # IB-V815</code></pre>
+
+  1. CP-V805
+  2. IB-V805
+  3. ND-V805
+  4. IB-V815
+  5. IB-V825
+  6. ND-V906
+  7. IB-V926
+  8. CP-V1405
+  9. IB-V1405
+ 10. ND-V1405
+ 11. IB-V1415
+ 12. IB-V1425
+ 13. IB-V1516
+ 14. IB-V1526
+ 15. ND-V1606
+ 16. CP-V2205
+ 17. IB-V2205
+ 18. ND-V2205
+ 19. IB-V2215
+ 20. IB-V2225
+ 21. ND-V2306
+ 22. IB-V2326
+ 23. IB-V4005
+ 24. ND-V4005
+ 25. IB-V4015
+ 26. IB-V4025
+ 27. ND-V4106
+ 28. IB-V4126
+ 29. IB-V5005
+
+Enter a number corresponding to a NIOS model (1 - 29) or q to quit: 4
+</code></pre>
         </li>
         <li class="step">
           <strong>Access the web UI.</strong>
