--- a/sop_infoblox_nios_initial_cli_setup_html.html
+++ b/sop_infoblox_nios_initial_cli_setup_html.html
@@ -97,7 +97,7 @@
           <strong>Log in to the CLI.</strong>
           <pre><code>Disconnect NOW if you have not been expressly authorized to use this system.
 login: admin
-Local password:info
+Local password:infoblox
 
 Infoblox &gt; </code></pre>
         </li>
