--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <ul>
     <li><a href="https://github.com/surajpjoshi/Infoblox/edit/master/index.html" target="_blank">Infoblox SOP Documents - Edit</a></li>
     <li><a href="sop_infoblox_nios_initial_cli_setup_html.html" target="_blank">infoblox_nios_initial_cli_setup</a></li>
-         
+    <li><a href="notes_page.html" target="_blank">infoblox_notes_page.html</a></li>  
   </ul>
 </body>
 </html>
+
