--- a/notes_page.html
+++ b/notes_page.html
@@ -118,32 +118,34 @@
       <section class="panel">
         <h2 style="margin:0 0 6px">Add / Edit Note</h2>
         <p class="muted" style="margin-top:0">Tip: store images in your repo's <code>images/</code> folder and use a relative URL like <code>images/pic.jpg</code>.</p>
-        <div class="row">
-          <div>
-            <label>Title</label>
-            <input id="title" type="text" placeholder="e.g., ISE Troubleshooting Tips" />
+        <form id="noteForm" onsubmit="event.preventDefault();">
+          <div class="row">
+            <div>
+              <label>Title</label>
+              <input id="title" type="text" placeholder="e.g., ISE Troubleshooting Tips" />
+            </div>
+            <div>
+              <label>Tags (comma separated)</label>
+              <input id="tags" type="text" placeholder="ise, radius, aaa" />
+            </div>
           </div>
-          <div>
-            <label>Tags (comma separated)</label>
-            <input id="tags" type="text" placeholder="ise, radius, aaa" />
+          <label>Body (plain text or quick notes)</label>
+          <textarea id="body" placeholder="Write your notes here..."></textarea>
+          <div class="row3">
+            <div>
+              <label>Image URL (optional)</label>
+              <input id="imageUrl" type="url" placeholder="images/screenshot.png or https://..." />
+            </div>
+            <div>
+              <label>Link URL (optional)</label>
+              <input id="linkUrl" type="url" placeholder="https://useful-link.example" />
+            </div>
+            <div>
+              <label>&nbsp;</label>
+              <button id="saveBtn" type="button" class="btn" style="width:100%">Save Note</button>
+            </div>
           </div>
-        </div>
-        <label>Body (plain text or quick notes)</label>
-        <textarea id="body" placeholder="Write your notes here..."></textarea>
-        <div class="row3">
-          <div>
-            <label>Image URL (optional)</label>
-            <input id="imageUrl" type="url" placeholder="images/screenshot.png or https://..." />
-          </div>
-          <div>
-            <label>Link URL (optional)</label>
-            <input id="linkUrl" type="url" placeholder="https://useful-link.example" />
-          </div>
-          <div>
-            <label>&nbsp;</label>
-            <button id="saveBtn" class="btn" style="width:100%">Save Note</button>
-          </div>
-        </div>
+        </form>
       </section>
 
       <section class="panel">
@@ -161,7 +163,6 @@
   </main>
 
   <script>
-    // --- Storage helpers ---
     const KEY = 'my-notes-v1';
     const $ = (sel) => document.querySelector(sel);
 
@@ -173,7 +174,6 @@
       render();
     }
 
-    // --- UI elements ---
     const titleEl = $('#title');
     const bodyEl = $('#body');
     const tagsEl = $('#tags');
@@ -184,24 +184,21 @@
     const searchEl = $('#search');
     const saveBtn = $('#saveBtn');
 
-    let editingId = null; // when set, Save updates the note
+    let editingId = null;
 
     function createNoteCard(note) {
       const card = document.createElement('article');
       card.className = 'card';
 
-      // Image
-      const imgSrc = note.imageUrl?.trim();
-      if (imgSrc) {
+      if (note.imageUrl?.trim()) {
         const img = document.createElement('img');
         img.className = 'thumb';
         img.loading = 'lazy';
         img.alt = note.title || 'note image';
-        img.src = imgSrc;
+        img.src = note.imageUrl;
         card.appendChild(img);
       }
 
-      // Content
       const content = document.createElement('div');
       content.className = 'content';
 
@@ -233,9 +230,15 @@
 
       card.appendChild(content);
 
-      // Actions
       const actions = document.createElement('div');
       actions.className = 'actions';
+
+      const viewBtn = document.createElement('button');
+      viewBtn.className = 'btn ghost';
+      viewBtn.textContent = 'View';
+      viewBtn.onclick = () => {
+        alert(`Title: ${note.title}\nTags: ${(note.tags||[]).join(', ')}\n\n${note.body}`);
+      };
 
       const editBtn = document.createElement('button');
       editBtn.className = 'btn secondary';
@@ -259,7 +262,7 @@
         writeNotes(notes);
       };
 
-      actions.append(editBtn, delBtn);
+      actions.append(viewBtn, editBtn, delBtn);
       card.appendChild(actions);
 
       return card;
@@ -267,21 +270,17 @@
 
     function render() {
       const q = searchEl.value.trim().toLowerCase();
-      const notes = readNotes()
-        .sort((a,b) => (b.updatedAt||b.createdAt) - (a.updatedAt||a.createdAt));
+      const notes = readNotes().sort((a,b) => (b.updatedAt||b.createdAt) - (a.updatedAt||a.createdAt));
 
-      const filtered = q
-        ? notes.filter(n =>
-            (n.title||'').toLowerCase().includes(q) ||
-            (n.body||'').toLowerCase().includes(q) ||
-            (n.tags||[]).join(',').toLowerCase().includes(q)
-          )
-        : notes;
+      const filtered = q ? notes.filter(n =>
+        (n.title||'').toLowerCase().includes(q) ||
+        (n.body||'').toLowerCase().includes(q) ||
+        (n.tags||[]).join(',').toLowerCase().includes(q)
+      ) : notes;
 
       listEl.innerHTML = '';
       filtered.forEach(n => listEl.appendChild(createNoteCard(n)));
-      const count = filtered.length;
-      countPill.textContent = `${count} note${count===1?'':'s'}`;
+      countPill.textContent = `${filtered.length} note${filtered.length===1?'':'s'}`;
     }
 
     function saveNote() {
@@ -305,14 +304,12 @@
         notes.push(note);
       }
 
-      // Clear form
       titleEl.value = bodyEl.value = imageUrlEl.value = linkUrlEl.value = '';
       tagsEl.value = '';
 
       writeNotes(notes);
     }
 
-    // Export / Import / Clear
     function exportNotes() {
       const data = JSON.stringify(readNotes(), null, 2);
       const blob = new Blob([data], { type: 'application/json' });
@@ -343,7 +340,6 @@
       render();
     }
 
-    // Wire up
     saveBtn.addEventListener('click', saveNote);
     $('#exportBtn').addEventListener('click', exportNotes);
     $('#importFile').addEventListener('change', (e) => {
@@ -353,8 +349,5 @@
     $('#clearAllBtn').addEventListener('click', clearAll);
     searchEl.addEventListener('input', render);
 
-    // Initial render
     render();
   </script>
-</body>
-</html>
